--- a/style.css
+++ b/style.css
@@ -156,14 +156,28 @@
 }
 
 .menu__list .menu-item.menu-item-has-children > a::after{
-    content: '\F284';
+    /*content: '\F284';
     font-weight: 900;
     font-family: "Roboto";
     margin-left: 0.5rem;
     display: inline-block;
     transform: rotate(90deg);
-    transition: transform .3s;
-    
+    transition: transform .3s;*/
+
+    content: "\f284";/* <i class="bi bi-chevron-left"></i> */
+    display: inline-block;
+    font-family: bootstrap-icons !important;
+    font-style: normal;
+    font-weight: normal !important;
+    font-variant: normal;
+    text-transform: none;
+    line-height: 1;
+    margin-left: 0.5rem;
+    vertical-align: -0.125em;
+    -webkit-font-smoothing: antialiased;
+    /*transform: rotate(270deg);*/
+    transform: rotate(0);
+    transition: transform .3s;    
 }
 
 .footer__main{
