--- a/style.css
+++ b/style.css
@@ -31,6 +31,11 @@
     --footer-bg-color: #ccc;
 }
 
+.fully__page{
+    display: grid;
+    grid-template-rows: auto 1fr auto;
+}
+
 .fully__page main{
     min-height: 100vh;
 }
