programming white menu

--- a/style.css
+++ b/style.css
@@ -4,28 +4,28 @@
     --light-color:#666;
     --box-shadow:0 .5rem 1.5rem rgba(0,0,0,.1);
 
-    --hamburger-color: #fff;
-    --hamburger-bar-color: #222;
-    --header-bar-color: #000;
-    --menu-nav-color:  rgba(0,0,0,.95);
+    --hamburger-color: rgb(43, 43, 43);
+    --hamburger-bar-color: #e7e7e7;
+    --header-bar-color: #f7f7f7);
+    --menu-nav-color:  rgba(245,245,245,.95);
     --menu-label-color: #888;
     
     /* Menu Item Level 1*/
     --menu-bgl1-color: rgba(255,255,255, 0.1);
-    --menu-bgl1-border: 1px solid #424242;
-    --menu-link1-color: #fff;
+    --menu-bgl1-border: 1px solid #ccc;
+    --menu-link1-color: #333;
     --menu-link-active: #f6572b;
-    --menu-link-hover: #fff098; 
+    --menu-link-hover: #04a9ff; 
 
     /* Menu Item Level 2*/
-    --menu-bgl2-color: #333;
-    --menu-bgl2-border: 1px solid #101010;
-    --menu-bgl2-hover: #222;
+    --menu-bgl2-color: #f4f4f4;
+    --menu-bgl2-border: 1px solid #ccc;
+    --menu-bgl2-hover: #e2e2e2;
 
     /* Menu Item Level 3*/
-    --menu-bgl3-color: #333;
+    --menu-bgl3-color: #eee;
     --menu-bgl3-border: 1px solid #101010;
-    --menu-bgl3-hover: #222;
+    --menu-bgl3-hover: #e2e2e2;
 
     /* Footer */
     --footer-bg-color: #ccc;
@@ -250,7 +250,8 @@
 }
 
 .menu__list .menu-item .sub-menu .menu-item:nth-last-child(1){    
-    margin-bottom: 1rem;
+    border-bottom: none;
+    margin-bottom: 1rem;    
 }
 
 
