create service section

--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;600;700&display=swap');
+@import 'https://fonts.googleapis.com/css?family=Montserrat:300, 400, 700&display=swap';
+
 :root{
     --green:#27ae60;
     --black:#192a56;
@@ -15,7 +18,7 @@
     --menu-bgl1-border: 1px solid #ccc;
     --menu-link1-color: #333;
     --menu-link-active: #f6572b;
-    --menu-link-hover: #04a9ff; 
+    --menu-link-hover: #0d6efd; 
 
     /* Menu Item Level 2*/
     --menu-bgl2-color: #f4f4f4;
@@ -41,7 +44,7 @@
 }
 
 .header__main{
-    background-color: var(--header-bar-color);
+    background-color: var(--header-bar-color);    
 }
 
 .header__menu{
@@ -254,6 +257,36 @@
     margin-bottom: 1rem;    
 }
 
+/* Global
+------------------------------------------------------------*/
+.wrapper__title h1{    
+    font-family: 'Montserrat', sans-serif;
+    width: fit-content;
+    height: auto;
+    margin: 0 auto;
+    position: relative;
+    
+}
+
+.wrapper__title h1:before{
+    content: "";
+    border: solid 2px #0d6efd;
+    border-right: none;
+    width: 18px;
+    position: absolute;
+    height: calc(100% + 14px);
+    left: -10px;
+    top: -7px;
+
+}
+
+.border__radius--2{
+    border-radius: .2rem;
+}
+
+/* .wrapper__title-{
+    background-color: aqua
+} */
 
 /* Slider
 ------------------------------------------------------------*/
@@ -326,7 +359,65 @@
 
 }
 
+.service__header{}
 
+.service__text{}
+
+.service__text p{
+    padding: 2rem 0;
+    margin-bottom: 0;
+}
+
+.service__list{}
+
+.service__unity{}
+
+.service__card{
+    background: #fff;
+    border: .1rem solid rgba(0,0,0,.2);
+    border-radius: .2rem;
+    box-shadow: var(--box-shadow);
+}
+
+.service__img{
+    border-radius: .2rem;
+    transition: .3s;
+}
+
+.service__img:hover{
+    /* -webkit-transform: scale(1.015);
+    -moz-transform: scale(1.015);
+    -ms-transform: scale(1.015);
+    -o-transform: scale(1.015); */
+    transform: scale(1.015);
+    opacity: 0.8;
+    transition: .3s;
+}
+
+.service__content{
+    padding: .8rem;
+}
+
+.service__title{
+    
+}
+
+.service__title h2{
+    font-size: 1.2rem;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 600;
+}
+
+.service__title h2 a{
+    color: #333;
+    text-decoration: none;
+    transition: all .2s;
+}
+
+.service__title h2 a:hover{
+    color: #0d6efd;
+    transition: all .3s;
+}
 
 /* Sec 
 ------------------------------------------------------------*/
@@ -366,6 +457,7 @@
 
     .header__main {
         background-color: var(--header-bar-color);
+        box-shadow: var(--box-shadow);
     }
 
     .header__menu .header__logo{        
