--- a/style.css
+++ b/style.css
@@ -382,7 +382,7 @@
 ------------------------------------------------------------*/
 .sec__about{
     /* background: #666; */
-    background: linear-gradient(to bottom right, rgb(207, 207, 207), rgb(250, 250, 250));
+    background: linear-gradient(to bottom right, rgb(238, 238, 238), rgb(250, 250, 250));
 }
 
 
@@ -554,8 +554,111 @@
     transition: all .3s;
 }
 
-/* Sec 
+/* Section News
 ------------------------------------------------------------*/
+.sec__news{
+    background-color: #fff;
+    padding: 4rem 0;
+}
+
+.news__list{}
+
+.news__unity{
+    background-color: transparent;
+    margin: 0 auto;
+    float: none;
+    margin-bottom: 10px;  
+    padding: 0.4rem;  
+    transition: .5s;
+}
+
+.news__card{
+    background: #fff;
+    /* box-shadow: 0 10px 30px 0 rgba(0 0 0 / 5%); */
+    box-shadow: var(--box-shadow);
+    height: 100%;
+    transition: .5s;
+}
+
+.news__card a{
+    text-decoration: none;
+}
+
+.news__img{
+    overflow: hidden;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+    height: 250px;
+    position: relative;
+    display: block;
+    transition: .5s;
+}
+
+.news__img:hover{
+    -webkit-transform: scale(1.015);
+    -moz-transform: scale(1.015);
+    -ms-transform: scale(1.015);
+    -o-transform: scale(1.015);
+    transform: scale(1.015);    
+    opacity: 0.8;
+    transition: .3s;
+}
+
+.news__date{
+    display: inline-block;
+    background: rgba(0, 0, 0, 0.6);
+}
+
+.news__date .day{
+    font-weight: 700;
+    font-size: 1.15rem;
+}
+
+.news__date .mos, .news__date .yr {
+    font-size: .8rem;
+}
+
+.news__date span{
+    display: block;
+    color: #fff;
+    font-family: var(--font-title);
+}
+
+.news__content{
+    padding: 1rem;
+}
+
+.news__title{
+    font-family: var(--font-title);
+    font-size: 1.1rem;
+    font-weight: 600;    
+    font-style: normal;    
+    line-height: 20px;
+    margin-bottom: .7rem;
+    text-align: left;    
+}
+
+.news__title a{
+    color: #333;     
+    text-decoration: none;
+    transition: .3s;
+}
+
+.news__title a:hover, 
+.news__title a:active, 
+.news__title a:focus {
+    color: #004eff; 
+    transition: .3s;
+}
+
+.news__info{}
+
+.news__footer{   
+    width: 100%;
+    margin: 0 auto;
+    padding: 2rem 0;
+}
 
 /* Sec 
 ------------------------------------------------------------*/
